--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,13 @@
       <artifactId>jfreechart</artifactId>
       <version>1.0.13</version>
     </dependency>
+
+    <!-- For aws access -->
+    <!--<dependency>-->
+      <!--<groupId>com.amazonaws</groupId>-->
+      <!--<artifactId>aws-java-sdk-pom</artifactId>-->
+      <!--<version>1.10.58</version>-->
+    <!--</dependency>-->
   </dependencies>
 
 </project>
