--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
     <dependencies>
       <dependency>
         <groupId>org.nd4j</groupId>
-        <artifactId>nd4j-x86</artifactId>
+        <artifactId>nd4j-native</artifactId>
         <version>${nd4j.version}</version>
       </dependency>
       <dependency>
@@ -169,7 +169,7 @@
     </dependency>
     <dependency>
       <groupId>org.nd4j</groupId>
-      <artifactId>nd4j-x86</artifactId>
+      <artifactId>nd4j-native</artifactId>
     </dependency>
     <!--includes kohsuke package-->
     <dependency>
