--- a/pom.xml
+++ b/pom.xml
@@ -210,11 +210,11 @@
         </dependency>
 
         <!-- For aws access -->
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-pom</artifactId>
-            <version>1.10.58</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.amazonaws</groupId>-->
+            <!--<artifactId>aws-java-sdk-pom</artifactId>-->
+            <!--<version>1.10.58</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
