--- a/pom.xml
+++ b/pom.xml
@@ -297,7 +297,7 @@
 
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-x86</artifactId>
+            <artifactId>nd4j-native</artifactId>
         </dependency>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
