--- a/pom.xml
+++ b/pom.xml
@@ -325,6 +325,13 @@
             <version>${dl4j.version}</version>
         </dependency>
 
+        <!-- For UI components -->
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-ui-components</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
         <!-- For histogram plots -->
         <dependency>
             <groupId>jfree</groupId>
