--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,21 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <!-- For Dropwizard. See: http://www.dropwizard.io/0.9.2/docs/getting-started.html#building-fat-jars-->
+                            <!-- reference.conf for Akka. See: http://doc.akka.io/docs/akka/snapshot/general/configuration.html#When_using_JarJar__OneJar__Assembly_or_any_jar-bundler -->
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.deeplearning4j.examples.StreamingDemoEntryPoint</mainClass>
+                                </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>reference.conf</resource>
+                                </transformer>
+                            </transformers>
                         </configuration>
                     </execution>
                 </executions>
+
             </plugin>
         </plugins>
     </build>
