--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,11 @@
         <logback.version>1.1.2</logback.version>
         <netty.version>4.0.28.Final</netty.version>
         <lombok.version>1.16.4</lombok.version>
-        <nd4j.version>0.4-rc3.10-SNAPSHOT</nd4j.version>
-        <dl4j.version>0.4-rc3.10-SNAPSHOT</dl4j.version>
+        <nd4j.version>0.4-rc3.9</nd4j.version>
+        <dl4j.version>0.4-rc3.9</dl4j.version>
         <scala.binary.version>2.10</scala.binary.version>
         <scala.version>2.10.4</scala.version>
         <spark.version>1.6.0</spark.version>
-        <!--deeplearning4j-ui uses 0.8.0 v-->
-        <dropwizard.version>0.9.2</dropwizard.version>
     </properties>
 
     <distributionManagement>
@@ -121,7 +119,7 @@
             </dependency>
             <dependency>
                 <groupId>org.nd4j</groupId>
-                <artifactId>nd4j-jcublas-7.0</artifactId>
+                <artifactId>nd4j-cuda-7.5</artifactId>
                 <version>${nd4j.version}</version>
             </dependency>
             <dependency>
@@ -132,51 +130,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-core</artifactId>
-            <version>${dropwizard.version}</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>log4j-over-slf4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-assets</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-client</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-forms</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-views-freemarker</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.dropwizard</groupId>
-            <artifactId>dropwizard-views-mustache</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
-
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>2.7.2</version>-->
-        <!--</dependency>-->
 
         <!-- Version 2.4.4 to match Spark (and hopefully avoid dependency clash on transitive dependency databind -->
         <dependency>
@@ -222,19 +175,12 @@
             <version>19.0</version>
         </dependency>
 
-        <!-- Force recent jersey server, to stop Spark from overriding dropwizard's 2.x jersey with spark 1.x jersey -->
-        <dependency>
-            <groupId>org.glassfish.jersey.core</groupId>
-            <artifactId>jersey-server</artifactId>
-            <version>2.22.1</version>
-        </dependency>
-
-        <!--Resolve conflict with heartbleed-->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.1</version>
-        </dependency>
+        <!--&lt;!&ndash;Resolve conflict with heartbleed&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.httpcomponents</groupId>-->
+            <!--<artifactId>httpclient</artifactId>-->
+            <!--<version>4.5.1</version>-->
+        <!--</dependency>-->
 
         <!-- For some reason we DO need this as a dependency, otherwise Spark streaming fails immediately... (NoSuchMethodException) -->
         <dependency>
