--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -2,7 +2,7 @@
   "backprop" : true,
   "backpropType" : "Standard",
   "confs" : [ {
-    "extraArgs" : [ 0.01 ],
+    "extraArgs" : [ 0.0 ],
     "l1ByParam" : {
       "b" : 0.0,
       "W" : 0.0
@@ -14,18 +14,13 @@
     "layer" : {
       "dense" : {
         "activationFunction" : "leakyrelu",
-        "adamMeanDecay" : 0.9,
-        "adamVarDecay" : 0.999,
+        "adamMeanDecay" : "NaN",
+        "adamVarDecay" : "NaN",
         "biasInit" : 0.0,
         "biasL1" : 0.0,
         "biasL2" : 0.0,
         "biasLearningRate" : 0.01,
-        "dist" : {
-          "normal" : {
-            "mean" : 0.001,
-            "std" : 1.0
-          }
-        },
+        "dist" : null,
         "dropOut" : 0.0,
         "gradientNormalization" : "None",
         "gradientNormalizationThreshold" : 1.0,
@@ -33,26 +28,26 @@
         "l2" : 1.0E-5,
         "layerName" : null,
         "learningRate" : 0.01,
-        "learningRateSchedule" : { },
+        "learningRateSchedule" : null,
         "momentum" : 0.9,
         "momentumSchedule" : { },
         "nin" : 66,
         "nout" : 256,
-        "rho" : 0.0,
-        "rmsDecay" : 0.95,
+        "rho" : "NaN",
+        "rmsDecay" : "NaN",
         "updater" : "NESTEROVS",
         "weightInit" : "XAVIER"
       }
     },
-    "leakyreluAlpha" : 0.01,
+    "leakyreluAlpha" : 0.0,
     "learningRateByParam" : {
       "b" : 0.01,
       "W" : 0.01
     },
     "learningRatePolicy" : "None",
-    "lrPolicyDecayRate" : 0.0,
-    "lrPolicyPower" : 0.0,
-    "lrPolicySteps" : 0.0,
+    "lrPolicyDecayRate" : "NaN",
+    "lrPolicyPower" : "NaN",
+    "lrPolicySteps" : "NaN",
     "maxNumLineSearchIterations" : 5,
     "miniBatch" : true,
     "minimize" : true,
@@ -64,7 +59,7 @@
     "useRegularization" : true,
     "variables" : [ "W", "b" ]
   }, {
-    "extraArgs" : [ 0.01 ],
+    "extraArgs" : [ 0.0 ],
     "l1ByParam" : {
       "b" : 0.0,
       "W" : 0.0
@@ -76,18 +71,13 @@
     "layer" : {
       "dense" : {
         "activationFunction" : "leakyrelu",
-        "adamMeanDecay" : 0.9,
-        "adamVarDecay" : 0.999,
+        "adamMeanDecay" : "NaN",
+        "adamVarDecay" : "NaN",
         "biasInit" : 0.0,
         "biasL1" : 0.0,
         "biasL2" : 0.0,
         "biasLearningRate" : 0.01,
-        "dist" : {
-          "normal" : {
-            "mean" : 0.001,
-            "std" : 1.0
-          }
-        },
+        "dist" : null,
         "dropOut" : 0.0,
         "gradientNormalization" : "None",
         "gradientNormalizationThreshold" : 1.0,
@@ -95,26 +85,26 @@
         "l2" : 1.0E-5,
         "layerName" : null,
         "learningRate" : 0.01,
-        "learningRateSchedule" : { },
+        "learningRateSchedule" : null,
         "momentum" : 0.9,
         "momentumSchedule" : { },
         "nin" : 256,
         "nout" : 256,
-        "rho" : 0.0,
-        "rmsDecay" : 0.95,
+        "rho" : "NaN",
+        "rmsDecay" : "NaN",
         "updater" : "NESTEROVS",
         "weightInit" : "XAVIER"
       }
     },
-    "leakyreluAlpha" : 0.01,
+    "leakyreluAlpha" : 0.0,
     "learningRateByParam" : {
       "b" : 0.01,
       "W" : 0.01
     },
     "learningRatePolicy" : "None",
-    "lrPolicyDecayRate" : 0.0,
-    "lrPolicyPower" : 0.0,
-    "lrPolicySteps" : 0.0,
+    "lrPolicyDecayRate" : "NaN",
+    "lrPolicyPower" : "NaN",
+    "lrPolicySteps" : "NaN",
     "maxNumLineSearchIterations" : 5,
     "miniBatch" : true,
     "minimize" : true,
@@ -138,19 +128,14 @@
     "layer" : {
       "output" : {
         "activationFunction" : "softmax",
-        "adamMeanDecay" : 0.9,
-        "adamVarDecay" : 0.999,
+        "adamMeanDecay" : "NaN",
+        "adamVarDecay" : "NaN",
         "biasInit" : 0.0,
         "biasL1" : 0.0,
         "biasL2" : 0.0,
         "biasLearningRate" : 0.01,
         "customLossFunction" : null,
-        "dist" : {
-          "normal" : {
-            "mean" : 0.001,
-            "std" : 1.0
-          }
-        },
+        "dist" : null,
         "dropOut" : 0.0,
         "gradientNormalization" : "None",
         "gradientNormalizationThreshold" : 1.0,
@@ -158,27 +143,27 @@
         "l2" : 1.0E-5,
         "layerName" : null,
         "learningRate" : 0.01,
-        "learningRateSchedule" : { },
+        "learningRateSchedule" : null,
         "lossFunction" : "MCXENT",
         "momentum" : 0.9,
         "momentumSchedule" : { },
         "nin" : 256,
         "nout" : 10,
-        "rho" : 0.0,
-        "rmsDecay" : 0.95,
+        "rho" : "NaN",
+        "rmsDecay" : "NaN",
         "updater" : "NESTEROVS",
         "weightInit" : "XAVIER"
       }
     },
-    "leakyreluAlpha" : 0.01,
+    "leakyreluAlpha" : 0.0,
     "learningRateByParam" : {
       "b" : 0.01,
       "W" : 0.01
     },
     "learningRatePolicy" : "None",
-    "lrPolicyDecayRate" : 0.0,
-    "lrPolicyPower" : 0.0,
-    "lrPolicySteps" : 0.0,
+    "lrPolicyDecayRate" : "NaN",
+    "lrPolicyPower" : "NaN",
+    "lrPolicySteps" : "NaN",
     "maxNumLineSearchIterations" : 5,
     "miniBatch" : true,
     "minimize" : true,
